# ckanext-passwordless_api

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml  setup.py  test.ini
ckanext/: __init__.py
ckanext/passwordless_api/: __init__.py  __version__.py  logic.py  mailer.py  plugin.py  util.py
ckanext/passwordless_api/templates/: login_token.txt  reset_key.txt  welcome_user.txt
ckanext/passwordless_api/tests/: __init__.py  test_plugin.py
docs/: openapi.yaml
