[project]
name = "ckanext-passwordless_api"
dynamic = ["version"]
description = "Extension to allow paswordless login to the CKAN API"
authors = [
    {name = "Sam Woodcock", email = "sam.woodcock@protonmail.com"},
]
dependencies = []
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}
keywords = ["CKAN", "passwordless", "token", "auth"]
classifiers = [
    "Topic :: Utilities",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10"
]

[project.entry-points."ckan.plugins"]
passwordless_api = "ckanext.passwordless_api.plugin:PasswordlessAPIPlugin"

[project.urls]
homepage = "https://gitlabext.wsl.ch/EnviDat/ckanext-passwordless_api.git"
documentation = "https://envidat.gitlab-pages.wsl.ch/ckanext-passwordless_api"
repository = "https://gitlabext.wsl.ch/EnviDat/ckanext-passwordless_api.git"

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[tool.pdm]
includes = ["ckanext"]
source-includes = ["ckanext/passwordless_api/tests", "CHANGELOG.md"]
version = {from = "ckanext/passwordless_api/__version__.py"}

[[tool.pdm.source]]
name = "pypi"
url = "https://pypi.org/simple"
verify_ssl = true

[tool.pdm.dev-dependencies]
dev = [
    "pytest-ckan>=0.0.12",
]

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.3.0"
version_files = [
    "pyproject.toml:version",
    "ckanext/passwordless_api/__version__.py",
    "docs/openapi.yaml:version",
]

[tool.isort]
profile = "black"
atomic = true
known_first_party = ["ckanext"]
